@@ -86,24 +86,52 @@ matches([ 1, 2, 3 ], sequence(number), '[ 1, 2, 3 ] is a sequence(number)');
 nonmatches([ 1, 2, 'a' ], sequence(number), '[ 1, 2, \'a\' ] is a sequence(number)');
 
 matches([ 1, 2, 3 ], contains(2), '[ 1, 2, 3 ] contains(2)');
+matches([ 1, 2, 3 ], contains(1,2,3), , '[ 1, 2, 3 ] contains(1,2,3)');
 nonmatches([ 1, 2, 3 ], contains(4), '[ 1, 2, 3 ] doesn\'t contains(2)');
+nonmatches([ 1, 2, 3 ], contains(1,2,4), , '[ 1, 2, 3 ] doesn\'t contains(1,2,4)');
 
 matches([ 3, 1, 2 ], sorted([1, 2, 3]), "[ 3, 1, 2 ] matches sorted([1, 2, 3])");
 nonmatches([ 3, 1, 2 ], sorted([1, 3, 2]), "[ 3, 1, 2 ] matches sorted([1, 2, 3])");
+
+matches([ 3, 10, 2 ], sorted([10, 2, 3]), "[ 3, 10, 2 ] matches sorted([10, 2, 3])");
+matches([ 3, 10, 2 ], sorted_by(sub { $_[0] <=> $_[1] }, [2, 3, 10]), "[ 3, 10, 2 ] matches sorted_by(sub { \$_[0] <=> \$_[1] }, [2, 3, 10])");
+
 
 my %hash = ( foo => 1, bar => 2 );
 matches({}, hash, '{} is a hash');
 nonmatches([], hash, '[] is not a hash');
 matches(\%hash, hash_keys(sorted([qw/bar foo/])), '{ foo => 1, bar => 2 } matches hash_keys([qw/bar foo/])');
 nonmatches({ foo => 1, baz => 2 }, hash_keys(sorted([qw/bar foo/])), '{ foo => 1, baz => 2 } doesn\'t match hash_keys([qw/bar foo/])');
-matches(\%hash, hash_values(sorted(tuple(1, 2))), "\%hash matches hash_values(sorted(list(1, 2)))");
-nonmatches(\%hash, hash_values(sorted(tuple(1, 2, 3))), "\%hash matches hash_values(sorted(list(1, 2)))");
-matches(\%hash, sub_hash({ foo => 1 }), "\%hash matches one sub entry");
-matches(\%hash, sub_hash({ bar => 2 }), "\%hash matches one sub entry");
-nonmatches(\%hash, sub_hash({ bar => 1 }), "\%hash doesn't match sub entry with no match");
-matches(\%hash, sub_hash(\%hash), "\%hash matches itself");
-matches(\%hash, sub_hash({}), "\%hash matches {}");
-nonmatches([], sub_hash({ bar => 1 }), "\%hash doesn't match sub entry with no match");
+matches(\%hash, hash_values(sorted(tuple(1, 2))), "\\%hash matches hash_values(sorted(list(1, 2)))");
+nonmatches(\%hash, hash_values(sorted(tuple(1, 2, 3))), "\\%hash matches hash_values(sorted(list(1, 2)))");
+
+matches({}, hashwise({}), "{} matches hashwise({})");
+matches(\%hash, hashwise(\%hash), "%hash matches hashwise(\\%hash)");
+nonmatches({}, hashwise(\%hash), "{} doesn't match hashwise(\\%hash)");
+nonmatches(\%hash, hashwise({}), "\\%hash doesn't match hashwise({})");
+
+matches(\%hash, sub_hash({ foo => 1 }), "\\%hash matches one sub entry");
+matches(\%hash, sub_hash({ bar => 2 }), "\\%hash matches one sub entry");
+nonmatches(\%hash, sub_hash({ bar => 1 }), "\\%hash doesn't match sub entry with no match");
+matches(\%hash, sub_hash(\%hash), "\\%hash matches itself");
+matches(\%hash, sub_hash({}), "\\%hash matches {}");
+nonmatches([], sub_hash({ bar => 1 }), "\\%hash doesn't match sub entry with no match");
+
+my $sub = sub {};
+
+matches($sub, address($sub), '$sub matches address($sub)');
+nonmatches($sub, address(sub {}), '$sub matches address(sub {})');
+
+matches(1, value(1), '[ 1 ] is value(1)');
+nonmatches(1, value(2), '[ 1 ] is not value(2)');
+matches([1], value([1]), '[ [1] ] is value([1])');
+nonmatches([1], value([2]), '[ [1] ] is not value([2])');
+matches({}, value({}), "{} matches value({})");
+matches(\%hash, value(\%hash), "%hash matches value(\\%hash)");
+nonmatches({}, value(\%hash), "{} doesn't match value(\\%hash)");
+nonmatches(\%hash, value({}), "\\%hash doesn't match value({})");
+matches($sub, value($sub), '$sub matches value($sub)');
+nonmatches($sub, value(sub {}), '$sub matches value(sub {})');
 
 for (1) {
 	when(always) {
